--- a/Blankf7/platforms/browser/www/tinola.html
+++ b/Blankf7/platforms/browser/www/tinola.html
@@ -22,26 +22,25 @@
 
       <!-- Your main view, should have "view-main" class -->
       <div class="view view-main">
-        <!-- Initial Page, "data-name" contains page name -->
-        <div data-name="home" class="page">
-
-          <!-- Scrollable page content -->
-          <div class="page-content">
-            <div class="list media-list">
-  <ul>
-    <li>
-        <div class="item-media"><img src="kobebryant.jpg" width="80" height="80"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Kobe Bryant</div>
-          </div>
-          <div class="item-subtitle">Los Angeles Lakers</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
-        </div></li>
-  </ul>
-</div>
-          </div>
+        <div class="page">
+  <div class="page-content">
+    <!-- Static Navbar -->
+    <div class="navbar">
+      <div class="navbar-inner">
+        <div class="left">
+          <a class="link back">
+            <i class="icon icon-back"></i>
+            <span class="ios-only">Back</span>
+          </a>
         </div>
+        <div class="title">Tinola</div>
+        <div class="right"></div>
+      </div>
+    </div>
+    <div class="item-media"><img src="images/tinola.jpg"/></div>
+    </div>
+  </div>
+</div>
       </div>
     </div>
     <!-- Path to Framework7 Library JS-->
