--- a/Blankf7/www/index.html
+++ b/Blankf7/www/index.html
@@ -28,16 +28,7 @@
           <!-- Top Navbar -->
           <div class="navbar">
             <div class="navbar-inner">
-              <div class="title">NBA Players</div>
-            </div>
-          </div>
-
-          <!-- Toolbar -->
-          <div class="toolbar">
-            <div class="toolbar-inner">
-              <!-- Toolbar links -->
-              <a href="#" class="link">Link 1</a>
-              <a href="#" class="link">Link 2</a>
+              <div class="title">My Recipes</div>
             </div>
           </div>
 
@@ -46,95 +37,77 @@
             <div class="list media-list">
   <ul>
     <li>
-      <a href="#" class="item-link item-content">
-        <div class="item-media"><img src="kobebryant.jpg" width="80" height="80"/></div>
+      <a href="/adobo/" class="item-link item-content">
+        <div class="item-media"><img src="images/adobo.jpg" width="100" height="100"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Kobe Bryant</div>
+            <div class="item-title">Adobo</div>
+            <div class="item-after">₱80</div>
           </div>
-          <div class="item-subtitle">Los Angeles Lakers</div>
+          <div class="item-subtitle">Main Course</div>
           <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
         </div></a></li>
     <li>
-      <a href="#" class="item-link item-content">
-        <div class="item-media"><img src="lebronjames.jpg" width="80" height="80"/></div>
+      <a href="/afritada/" class="item-link item-content">
+        <div class="item-media"><img src="images/afritada.jpg" width="100" height="100"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Lebron James</div>
+            <div class="item-title">Afritada</div>
+            <div class="item-after">₱85</div>
           </div>
-          <div class="item-subtitle">Los Angeles Lakers</div>
+          <div class="item-subtitle">Main Course</div>
           <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
         </div>
       </a>
     </li>
     <li>
-      <a href="#" class="item-link item-content">
-        <div class="item-media"><img src="kevingarnett.jpg" width="80" height="80"/></div>
+      <a href="/bulalo/" class="item-link item-content">
+        <div class="item-media"><img src="images/bulalo.jpg" width="100" height="100"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Kevin Garnett</div>
+            <div class="item-title">Bulalo</div>
+            <div class="item-after">₱110</div>
           </div>
-          <div class="item-subtitle">Boston Celtics</div>
+          <div class="item-subtitle">Main Course</div>
           <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
         </div>
       </a>
     </li>
     <li>
-      <a href="#" class="item-link item-content">
-        <div class="item-media"><img src="dwyanewade.jpg" width="80" height="80"/></div>
+      <a href="/kinilaw/" class="item-link item-content">
+        <div class="item-media"><img src="images/kinilaw.jpg" width="100" height="100"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Dwyane Wade</div>
+            <div class="item-title">Kinilaw</div>
+            <div class="item-after">₱95</div>
           </div>
-          <div class="item-subtitle">Miami Heat</div>
+          <div class="item-subtitle">Appetizer</div>
           <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
         </div>
       </a>
     </li>
     <li>
-      <a href="#" class="item-link item-content">
-        <div class="item-media"><img src="kevindurant.jpg" width="80" height="80"/></div>
+      <a href="/sisig/" class="item-link item-content">
+        <div class="item-media"><img src="images/sisig.jpg" width="100" height="100"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Kevin Durant</div>
+            <div class="item-title">Sisig</div>
+            <div class="item-after">₱70</div>
           </div>
-          <div class="item-subtitle">Golden State Warriors</div>
+          <div class="item-subtitle">Main Course / Snack</div>
           <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
         </div>
       </a>
     </li>
     <li>
-      <a href="#" class="item-link item-content">
-        <div class="item-media"><img src="shaq.jpg" width="80" height="80"/></div>
+      <a href="/tinola/" class="item-link item-content">
+        <div class="item-media"><img src="images/tinola.jpg" width="100" height="100"/></div>
         <div class="item-inner">
           <div class="item-title-row">
-            <div class="item-title">Shaquille O'neal</div>
+            <div class="item-title">Tinola</div>
+            <div class="item-after">₱90</div>
           </div>
-          <div class="item-subtitle">Miami Heat</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="#" class="item-link item-content">
-        <div class="item-media"><img src="jordan.jpg" width="80" height="80"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Michael Jordan</div>
-          </div>
-          <div class="item-subtitle">Chicago Bulls</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="#" class="item-link item-content">
-        <div class="item-media"><img src="rjreroma.jpg" width="80" height="80"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">RJ Reroma</div>
-          </div>
-          <div class="item-subtitle">Los Angeles Lakers</div>
+          <div class="item-subtitle">Main Course</div>
           <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
         </div>
       </a>
