--- a/Blankf7/www/index.html
+++ b/Blankf7/www/index.html
@@ -28,93 +28,26 @@
           <!-- Top Navbar -->
           <div class="navbar">
             <div class="navbar-inner">
-              <div class="title">My Recipes</div>
+              <div class="title">RJ and Sachzna's Wedding</div>
             </div>
           </div>
 
+          <!-- Toolbar -->
+
           <!-- Scrollable page content -->
           <div class="page-content">
-            <div class="list media-list">
-  <ul>
-    <li>
-      <a href="/adobo/" class="item-link item-content">
-        <div class="item-media"><img src="images/adobo.jpg" width="100" height="100"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Adobo</div>
-            <div class="item-after">₱80</div>
+            <div id="wrap">
+            <div id="left"><img src="images/rj.jpg" height="330"/> </div>
+            <div id="right"><img src="images/hand.jpg" height="165" width="170"/><img src="images/sachznawed.jpg" height="165" width="170"/></div>
+
+            </div>
+            <div class="block">
+          <p class="row">
+          <button class="col button button-big">RJ AND SACHZNA</button>
+          </p>
           </div>
-          <div class="item-subtitle">Main Course</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
-        </div></a></li>
-    <li>
-      <a href="/afritada/" class="item-link item-content">
-        <div class="item-media"><img src="images/afritada.jpg" width="100" height="100"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Afritada</div>
-            <div class="item-after">₱85</div>
           </div>
-          <div class="item-subtitle">Main Course</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="/bulalo/" class="item-link item-content">
-        <div class="item-media"><img src="images/bulalo.jpg" width="100" height="100"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Bulalo</div>
-            <div class="item-after">₱110</div>
-          </div>
-          <div class="item-subtitle">Main Course</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="/kinilaw/" class="item-link item-content">
-        <div class="item-media"><img src="images/kinilaw.jpg" width="100" height="100"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Kinilaw</div>
-            <div class="item-after">₱95</div>
-          </div>
-          <div class="item-subtitle">Appetizer</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="/sisig/" class="item-link item-content">
-        <div class="item-media"><img src="images/sisig.jpg" width="100" height="100"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Sisig</div>
-            <div class="item-after">₱70</div>
-          </div>
-          <div class="item-subtitle">Main Course / Snack</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="/tinola/" class="item-link item-content">
-        <div class="item-media"><img src="images/tinola.jpg" width="100" height="100"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Tinola</div>
-            <div class="item-after">₱90</div>
-          </div>
-          <div class="item-subtitle">Main Course</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
-        </div>
-      </a>
-    </li>
-  </ul>
-</div>
-          </div>
+
         </div>
       </div>
     </div>
