--- a/Blankf7/www/index.html
+++ b/Blankf7/www/index.html
@@ -15,6 +15,13 @@
     <link rel="stylesheet" href="css/my-app.css">
   </head>
   <body>
+    <style type="text/css">
+    a {
+      line-height: 42px;
+      height: 60px;
+      width: 350px;
+    }
+    </style>
     <!-- App root element -->
     <div id="app">
       <!-- Statusbar overlay -->
@@ -43,7 +50,7 @@
             </div>
             <div class="block">
           <p class="row">
-          <button class="col button button-big">RJ AND SACHZNA</button>
+          <a href="/visitors/"><button class="col button button-big">RJ AND SACHZNA</button></a>
           </p>
           </div>
           </div>
