--- a/Blankf7/www/visitors.html
+++ b/Blankf7/www/visitors.html
@@ -28,7 +28,7 @@
           <!-- Top Navbar -->
           <div class="navbar">
             <div class="navbar-inner">
-              <div class="title">My Recipes</div>
+              <div class="title">VISITORS</div>
             </div>
           </div>
 
@@ -37,11 +37,11 @@
             <div class="list">
   <div class="list-group">
     <ul>
-      <li class="list-group-title">A</li>
+      <li class="list-group-title">GROOM'S MEN</li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Aaron </div>
+            <div class="item-title">Aaron</div>
           </div>
         </div>
       </li>
@@ -63,7 +63,7 @@
   </div>
   <div class="list-group">
     <ul>
-      <li class="list-group-title">B</li>
+      <li class="list-group-title">BRIDE'S MAID</li>
       <li>
         <div class="item-content">
           <div class="item-inner">
@@ -89,7 +89,7 @@
   </div>
   <div class="list-group">
     <ul>
-      <li class="list-group-title">C</li>
+      <li class="list-group-title">GOD PARENTS</li>
       <li>
         <div class="item-content">
           <div class="item-inner">
