--- a/Blankf7/platforms/browser/www/index2.html
+++ b/Blankf7/platforms/browser/www/index2.html
@@ -9,10 +9,11 @@
     <meta name="theme-color" content="#2196f3">
     <!-- Your app title -->
     <title>My App</title>
-    <!-- Path to Framework7 Library CSS -->
-    <link rel="stylesheet" href="lib/framework7/css/framework7.min.css">
+    <!-- Path to Framework7 Library Bundle CSS -->
+   <link rel="stylesheet" href="lib/framework7/css/framework7.min.css">
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="css/my-app.css">
+  <link href='https://fonts.googleapis.com/css?family=Yesteryear' rel='stylesheet'>
   </head>
   <body>
     <!-- App root element -->
@@ -28,89 +29,55 @@
           <!-- Top Navbar -->
           <div class="navbar">
             <div class="navbar-inner">
-              <div class="title">My Recipes</div>
+              <div class="title">Awesome App</div>
             </div>
           </div>
 
+          <!-- Bottom Toolbar -->
+
           <!-- Scrollable page content -->
-          <div class="page-content">
-            <div class="list media-list">
+          <div class="page-content" style="background-color: black">
+            <div class="list">
   <ul>
-    <li>
-      <a href="/adobo/" class="item-link item-content">
-        <div class="item-media"><img src="images/adobo.jpg" width="100" height="100"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Adobo</div>
-            <div class="item-after">₱80</div>
-          </div>
-          <div class="item-subtitle">Main Course</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
-        </div></a></li>
-    <li>
-      <a href="/afritada/" class="item-link item-content">
-        <div class="item-media"><img src="images/afritada.jpg" width="100" height="100"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Afritada</div>
-            <div class="item-after">₱85</div>
-          </div>
-          <div class="item-subtitle">Main Course</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+    <li class="swipeout" style="height: 200px; width:375px; background-image: url(images/invited.jpg);">
+      <div class="item-content swipeout-content">
+        <div class="item-media">
+          <i class="icon icon-f7"></i>
         </div>
-      </a>
+      </div>
+      <div class="swipeout-actions-right">
+        <a href="#" class="open-more-actions">More</a>
+      </div>
     </li>
-    <li>
-      <a href="/bulalo/" class="item-link item-content">
-        <div class="item-media"><img src="images/bulalo.jpg" width="100" height="100"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Bulalo</div>
-            <div class="item-after">₱110</div>
-          </div>
-          <div class="item-subtitle">Main Course</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+    <li class="swipeout" style="height: 200px; width:375px; background-image: url(images/eventSL.jpg);">
+      <div class="item-content swipeout-content">
+        <div class="item-media">
+          <i class="icon icon-f7"></i>
         </div>
-      </a>
+      </div>
+      <div class="swipeout-actions-right">
+        <a href="#" class="open-more-actions">More</a>
+      </div>
     </li>
-    <li>
-      <a href="/kinilaw/" class="item-link item-content">
-        <div class="item-media"><img src="images/kinilaw.jpg" width="100" height="100"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Kinilaw</div>
-            <div class="item-after">₱95</div>
-          </div>
-          <div class="item-subtitle">Appetizer</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+        <li class="swipeout" style="height: 200px; width:375px; background-image: url(images/Guestlist.jpg);">
+      <div class="item-content swipeout-content">
+        <div class="item-media">
+          <i class="icon icon-f7"></i>
         </div>
-      </a>
+      </div>
+      <div class="swipeout-actions-right">
+        <a href="#" class="open-more-actions">More</a>
+      </div>
     </li>
-    <li>
-      <a href="/sisig/" class="item-link item-content">
-        <div class="item-media"><img src="images/sisig.jpg" width="100" height="100"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Sisig</div>
-            <div class="item-after">₱70</div>
-          </div>
-          <div class="item-subtitle">Main Course / Snack</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+        <li class="swipeout" style="height: 200px; width:375px; background-image: url(images/fd.jpg);">
+      <div class="item-content swipeout-content">
+        <div class="item-media">
+          <i class="icon icon-f7"></i>
         </div>
-      </a>
-    </li>
-    <li>
-      <a href="/tinola/" class="item-link item-content">
-        <div class="item-media"><img src="images/tinola.jpg" width="100" height="100"/></div>
-        <div class="item-inner">
-          <div class="item-title-row">
-            <div class="item-title">Tinola</div>
-            <div class="item-after">₱90</div>
-          </div>
-          <div class="item-subtitle">Main Course</div>
-          <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
-        </div>
-      </a>
+      </div>
+      <div class="swipeout-actions-right">
+        <a href="#" class="open-more-actions" style="background-color: #244345; opacity: 0.9">More</a>
+      </div>
     </li>
   </ul>
 </div>
@@ -118,9 +85,10 @@
         </div>
       </div>
     </div>
-    <!-- Path to Framework7 Library JS-->
+    <!-- Path to Framework7 Library Bundle JS-->
     <script type="text/javascript" src="lib/framework7/js/framework7.min.js"></script>
     <!-- Path to your app js-->
     <script type="text/javascript" src="js/my-app.js"></script>
   </body>
 </html>
+
