--- a/Blankf7/www/index.html
+++ b/Blankf7/www/index.html
@@ -52,34 +52,27 @@
         <div data-name="home" class="page">
 
           <!-- Top Navbar -->
-          <div class="navbar">
-            <div class="navbar-inner">
-              <div class="title">RJ and Sachzna's Wedding</div>
-            </div>
-          </div>
-
+          
           <!-- Toolbar -->
 
           <!-- Scrollable page content -->
           <div class="page-content">
-             <div><img src="images/church.png" style="width:100%"><div>
+            <div class="top">
+             <div><img src="images/eden.jpg" style="width:100%"></div>
                 <div class="row">
      <div class="column">
-        <img src="images/paloy.jpg" height="130" style="width:100%">
+        <img src="images/hand.jpg" height="130" style="width:100%">
       </div>
       <div class="column">
-       <img src="images/garden.jpg" height="130" style="width:100%">
+       <img src="images/sachznawed.jpg" height="130" style="width:100%">
           </div>
       <div class="column">
-         <img src="images/sachznawed.jpg" height="130" style="width:100%">
+         <img src="images/flower.jpg" height="130" style="width:100%">
         </div>
       </div>
-            <div class="block">
-          <p class="row">
-          <a href="/visitors/"><button class="col button button-big"><div class="customH">RJ AND SACHZNA</div></button></a>
-          </p>
-          </div>
-          </div>
+    </div>
+           <div class = "green" style="background-image: url(images/purple.jpg);">
+         <a href="/menu/"> <div class="click"></div></a>
 
         </div>
       </div>
