--- a/Blankf7/platforms/browser/www/menu.html
+++ b/Blankf7/platforms/browser/www/menu.html
@@ -23,13 +23,13 @@
       </a>
     </li>
     <li>
-      <a href="/bulalo/" class="item-link item-content" style="height: 200px; width:375px;background-image: url(images/Guestlist.jpg);">
+      <a href="/visitors/" class="item-link item-content" style="height: 200px; width:375px;background-image: url(images/Guestlist.jpg);">
         <div class="item-media"></div>
        
       </a>
     </li>
     <li>
-      <a href="/kinilaw/" class="item-link item-content" style="height: 200px; width:375px;background-image: url(images/fd.jpg);">
+      <a href="/food/" class="item-link item-content" style="height: 200px; width:375px;background-image: url(images/fd.jpg);">
         <div class="item-media"></div>
       </a>
     </li>
