--- a/Blankf7/platforms/browser/www/visitors.html
+++ b/Blankf7/platforms/browser/www/visitors.html
@@ -25,12 +25,17 @@
         <!-- Initial Page, "data-name" contains page name -->
         <div data-name="home" class="page">
 
-          <!-- Top Navbar -->
           <div class="navbar">
-            <div class="navbar-inner">
-              <div class="title">VISITORS</div>
-            </div>
-          </div>
+    <div class="navbar-inner sliding">
+      <div class="left">
+        <a class="link back">
+          <i class="icon icon-back"></i>
+          <span class="ios-only">Back</span>
+        </a>
+      </div>
+      <div class="title">Fixed Navbar</div>
+    </div>
+  </div>
 
           <!-- Scrollable page content -->
           <div class="page-content">
@@ -41,21 +46,35 @@
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Aaron</div>
+            <div class="item-title">Emil</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Abbie</div>
+            <div class="item-title">Fernan</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Adam</div>
+            <div class="item-title">Karl</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Joseph</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Santos</div>
           </div>
         </div>
       </li>
@@ -67,21 +86,21 @@
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Bailey</div>
+            <div class="item-title">Andrea</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Barclay</div>
+            <div class="item-title">Cara</div>
           </div>
         </div>
       </li>
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Bartolo</div>
+            <div class="item-title">Veronica</div>
           </div>
         </div>
       </li>
@@ -93,7 +112,7 @@
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Caiden</div>
+            <div class="item-title">Robert</div>
           </div>
         </div>
       </li>
@@ -107,7 +126,40 @@
       <li>
         <div class="item-content">
           <div class="item-inner">
-            <div class="item-title">Candy</div>
+            <div class="item-title">Joshua</div>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <div class="list-group">
+    <ul>
+      <li class="list-group-title">FLOWER GIRLS</li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Rica</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Kate</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Joan</div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="item-content">
+          <div class="item-inner">
+            <div class="item-title">Vanessa</div>
           </div>
         </div>
       </li>
