--- a/Blankf7/platforms/browser/www/adobo.html
+++ b/Blankf7/platforms/browser/www/adobo.html
@@ -25,19 +25,173 @@
         <div class="page">
   <div class="page-content">
     <!-- Static Navbar -->
-    <div class="navbar">
-      <div class="navbar-inner">
-        <div class="left">
-          <a class="link back">
-            <i class="icon icon-back"></i>
-            <span class="ios-only">Back</span>
-          </a>
-        </div>
-        <div class="title">Adobo</div>
-        <div class="right"></div>
+    <!-- Timeline -->
+
+   <h2> Schedule </h2>
+   <div class ="tl" style="height: 1000px; width: 400px; margin: 10px;">
+<div class="timeline">
+  <!-- Timeline item -->
+  <div class="timeline-item">
+    <div class="timeline-item-date">11:00<small>am</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content">Wedding Ceremony</div>
+  </div>
+  <!-- Timeline item with inner -->
+  <div class="timeline-item">
+    <div class="timeline-item-date">12:00<small>pm</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content">End of Ceremony
+      <div class="timeline-item-inner"></div>
+    </div>
+  </div>
+  <!-- Timeline item with special timeline elements -->
+  <div class="timeline-item">
+    <div class="timeline-item-date">12:30<small>pm</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content">All travels to Reception Venue
+      <div class="timeline-item-time"></div>
+      <div class="timeline-item-title"></div>
+      <div class="timeline-item-subtitle"></div>
+      <div class="timeline-item-text"></div>
+    </div>
+  </div>
+  <!-- Timeline item with special timeline elements and inner -->
+  <div class="timeline-item">
+    <div class="timeline-item-date">1:00<small>pm</small></div>
+    <div class="timeline-item-divider"></div>Guest are welcome to reception
+    <div class="timeline-item-content">
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
       </div>
     </div>
-    <div class="item-media"><img src="images/adobo.jpg"/></div>
+  </div>
+  <!-- Timeline item with multiple events per day  -->
+  <div class="timeline-item">
+    <div class="timeline-item-date">1:20<small>pm</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content"> Wedding Party Introduction <br> Couple's Grand Entrance
+    </div>
+  </div>
+  <!-- Timeline item with multiple events (inners) per day -->
+  <div class="timeline-item">
+    <div class="timeline-item-date">1:30<small>pm</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content">First Dance
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+      </div>
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+
+      </div>
+    </div>
+  </div>
+  <div class="timeline-item">
+    <div class="timeline-item-date">1:40<small>pm</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content">Lunch
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+      </div>
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+      </div>
+    </div>
+  </div>
+    <div class="timeline-item">
+    <div class="timeline-item-date">2:10<small>pm</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content">Toast
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+      </div>
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+
+      </div>
+    </div>
+  </div>
+    <div class="timeline-item">
+    <div class="timeline-item-date">2:15<small>pm</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content">Family Speech
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+      </div>
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+
+      </div>
+    </div>
+  </div>
+
+    <div class="timeline-item">
+    <div class="timeline-item-date">2:30<small>pm</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content">Cake Cutting
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+      </div>
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+
+      </div>
+    </div>
+  </div>
+    <div class="timeline-item">
+    <div class="timeline-item-date">2:40<small>pm</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content">Party Time
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+      </div>
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+
+      </div>
+    </div>
+  </div>
+    <div class="timeline-item">
+    <div class="timeline-item-date">3:00<small>pm</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content">Last Dance
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+      </div>
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+
+      </div>
+    </div>
+  </div>
+    <div class="timeline-item">
+    <div class="timeline-item-date">3:30<small>pm</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content">Couple Exit, Reception Ends
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+      </div>
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+
+      </div>
+    </div>
+  </div>
+    <div class="timeline-item">
+    <div class="timeline-item-date">3:50<small>pm</small></div>
+    <div class="timeline-item-divider"></div>
+    <div class="timeline-item-content">Drink Time
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+      </div>
+      <div class="timeline-item-inner">
+        <div class="timeline-item-time"></div>
+
+      </div>
+    </div>
+  </div>
+</div>
+</div>
     </div>
   </div>
 </div>
