--- a/Blankf7/platforms/browser/www/index2.html
+++ b/Blankf7/platforms/browser/www/index2.html
@@ -36,50 +36,21 @@
           <!-- Bottom Toolbar -->
 
           <!-- Scrollable page content -->
-          <div class="page-content" style="background-color: black">
-            <div class="list">
-  <ul>
-    <li class="swipeout" style="height: 200px; width:375px; background-image: url(images/invited.jpg);">
-      <div class="item-content swipeout-content">
-        <div class="item-media">
-          <i class="icon icon-f7"></i>
-        </div>
-      </div>
-      <div class="swipeout-actions-right">
-        <a href="#" class="open-more-actions">More</a>
-      </div>
-    </li>
-    <li class="swipeout" style="height: 200px; width:375px; background-image: url(images/eventSL.jpg);">
-      <div class="item-content swipeout-content">
-        <div class="item-media">
-          <i class="icon icon-f7"></i>
-        </div>
-      </div>
-      <div class="swipeout-actions-right">
-        <a href="#" class="open-more-actions">More</a>
-      </div>
-    </li>
-        <li class="swipeout" style="height: 200px; width:375px; background-image: url(images/Guestlist.jpg);">
-      <div class="item-content swipeout-content">
-        <div class="item-media">
-          <i class="icon icon-f7"></i>
-        </div>
-      </div>
-      <div class="swipeout-actions-right">
-        <a href="#" class="open-more-actions">More</a>
-      </div>
-    </li>
-        <li class="swipeout" style="height: 200px; width:375px; background-image: url(images/fd.jpg);">
-      <div class="item-content swipeout-content">
-        <div class="item-media">
-          <i class="icon icon-f7"></i>
-        </div>
-      </div>
-      <div class="swipeout-actions-right">
-        <a href="#" class="open-more-actions" style="background-color: #244345; opacity: 0.9">More</a>
-      </div>
-    </li>
-  </ul>
+          <div class="page-content">
+            <div data-speed="900" data-pagination='{"el": ".swiper-pagination"}' data-space-between="50" class="swiper-container swiper-init demo-swiper" style="height: 410px;">
+  <div class="swiper-pagination"></div>
+  <div class="swiper-wrapper">
+    <div class="swiper-slide">Slide 1</div>
+    <div class="swiper-slide">Slide 2</div>
+    <div class="swiper-slide">Slide 3</div>
+    <div class="swiper-slide">Slide 4</div>
+    <div class="swiper-slide">Slide 5</div>
+    <div class="swiper-slide">Slide 6</div>
+    <div class="swiper-slide">Slide 7</div>
+    <div class="swiper-slide">Slide 8</div>
+    <div class="swiper-slide">Slide 9</div>
+    <div class="swiper-slide">Slide 10</div>
+  </div>
 </div>
           </div>
         </div>
@@ -90,5 +61,36 @@
     <!-- Path to your app js-->
     <script type="text/javascript" src="js/my-app.js"></script>
   </body>
+  <style type="text/css">
+    /* A bit of demo styles */;
+.demo-swiper .swiper-slide {
+  font-size: 25px;
+  font-weight: 300;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  color: #000;
+}
+.demo-swiper .swiper-slide {
+  box-sizing: border-box;
+  border: 1px solid #ddd;
+  background: #fff;
+}
+.demo-swiper {
+  margin: 0px 0 35px;
+  font-size: 18px;
+  height: 120px;
+}
+.demo-swiper.demo-swiper-auto .swiper-slide {
+  width: 85%;
+}
+.demo-swiper.demo-swiper-auto .swiper-slide:nth-child(2n) {
+  width: 70%;
+}
+.demo-swiper.demo-swiper-auto .swiper-slide:nth-child(3n) {
+  width: 30%;
+}
+  </style>
 </html>
 
