--- a/Blankf7/www/index.html
+++ b/Blankf7/www/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- Color theme for statusbar -->
     <meta name="theme-color" content="#2196f3">
@@ -71,12 +72,7 @@
         </div>
       </div>
     </div>
-           <div class = "green" style="background-image: url(images/purple.jpg);">
-         <a href="/menu/"> <div class="click"></div></a>
-
-        </div>
-      </div>
-    </div>
+    <div class="green" style="background-image: url(images/purple.jpg);"><a href=/menu/><div class="click"></div></a></div>
     <!-- Path to Framework7 Library JS-->
     <script type="text/javascript" src="lib/framework7/js/framework7.min.js"></script>
     <!-- Path to your app js-->
