--- a/Blankf7/www/menu.html
+++ b/Blankf7/www/menu.html
@@ -15,22 +15,23 @@
      <div class="list media-list">
   <ul>
     <li>
-      <a href="/adobo/" class="item-link item-content" style="height: 130px; width:375px; background-image: url(images/invited.jpg);">
+      <a href="/adobo/" class="item-link item-content" style="height: 410px; width: 375px; background-image: url(images/location.jpg); padding: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; padding-bottom: 10px;">
         <div class="item-media"></div></a></li>
     <li>
-      <a href="/afritada/" class="item-link item-content" style="height: 200px; width:375px; background-image: url(images/eventSL.jpg);">
+      <a href="/afritada/" class="item-link item-content" style="height: 410px; width: 375px; background-image: url(images/wear.jpg); padding: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; padding-bottom: 10px">
         <div class="item-media"></div>
       </a>
     </li>
     <li>
-      <a href="/visitors/" class="item-link item-content" style="height: 200px; width:375px;background-image: url(images/Guestlist.jpg);">
+      <a href="/visitors/" class="item-link item-content" style="height: 410px; width: 375px; background-image: url(images/guest.jpg); padding: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; padding-bottom: 10px">
         <div class="item-media"></div>
        
       </a>
     </li>
     <li>
-      <a href="/food/" class="item-link item-content" style="height: 200px; width:375px;background-image: url(images/fd.jpg);">
+      <a href="/food/" class="item-link item-content" style="height: 410px; width: 375px; background-image: url(images/food.jpg); padding: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; padding-bottom: 10px">
         <div class="item-media"></div>
+       
       </a>
     </li>
   </ul>
