--- a/Blankf7/platforms/browser/www/menu.html
+++ b/Blankf7/platforms/browser/www/menu.html
@@ -15,10 +15,10 @@
      <div class="list media-list">
   <ul>
     <li>
-      <a href="/adobo/" class="item-link item-content" style="height: 410px; width: 375px; background-image: url(images/location.jpg); padding: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; padding-bottom: 10px;">
+      <a href="/schedule/" class="item-link item-content" style="height: 410px; width: 375px; background-image: url(images/location.jpg); padding: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; padding-bottom: 10px;">
         <div class="item-media"></div></a></li>
     <li>
-      <a href="/afritada/" class="item-link item-content" style="height: 410px; width: 375px; background-image: url(images/wear.jpg); padding: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; padding-bottom: 10px">
+      <a href="/dresses/" class="item-link item-content" style="height: 410px; width: 375px; background-image: url(images/wear.jpg); padding: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; padding-bottom: 10px">
         <div class="item-media"></div>
       </a>
     </li>
