--- a/Blankf7/www/schedule.html
+++ b/Blankf7/www/schedule.html
@@ -23,11 +23,23 @@
       <!-- Your main view, should have "view-main" class -->
       <div class="view view-main">
         <div class="page">
+          <div class="navbar">
+    <!-- Additional "navbar-inner-large" class on navbar-inner -->
+    <div class="navbar-inner navbar-inner-large sliding">
+      <div class="left">
+        <a class="link back">
+          <i class="icon icon-back"></i>
+          <span class="ios-only">Back</span>
+        </a>
+      </div>
+      <!-- Large title element -->
+    </div>
+  </div>
   <div class="page-content">
     <!-- Static Navbar -->
     <!-- Timeline -->
 
-   <h2> Schedule </h2>
+   <h2> <center>Schedule of Activities</center></h2>
    <div class ="tl" style="height: 1000px; width: 400px; margin: 10px;">
 <div class="timeline">
   <!-- Timeline item -->
